--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,10 @@ span[data-descr] {
 span[data-descr]:hover::after {
   content: attr(data-descr);
   position: fixed;
-  top: 1em;
-  left: 1em;
+  top: 7.5em;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
   border: 1px #aaa solid;
   border-radius: 10px;
   background-color: #040410;
